Added get_buckets call
